--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission
         android:name="moe.shizuku.manager.permission.API_V23"
         tools:node="remove" />
-    
+
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
@@ -48,9 +48,12 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="r">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:banner="@mipmap/banner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
