--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -169,7 +169,7 @@ dependencies {
 
     implementation 'moe.shizuku.fontprovider:api:10'
 
-    implementation 'me.weishu:free_reflection:2.2.0' // bypass hidden api restriction
+    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:1.1' // bypass hidden api restriction
 
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
