--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -66,7 +66,13 @@
             android:label="@string/home_terminal_title" />
         <activity
             android:name=".settings.SettingsActivity"
-            android:label="@string/settings_title" />
+            android:exported="false"
+            android:label="@string/settings_title">
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".starter.StarterActivity"
             android:label="@string/starter" />
