--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -161,6 +161,7 @@ dependencies {
     implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.2.0'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.2.1'
+    implementation 'dev.rikka.rikkax.insets:insets:1.1.0'
     implementation 'dev.rikka.rikkax.widget:borderview:1.0.1'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.2'
 
