--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,13 @@ name: Build Release CI
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+    - '*.md'
+    - 'LICENSE'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+    - '*.md'
 
 jobs:
   build:
