--- a/manager/src/main/jni/CMakeLists.txt
+++ b/manager/src/main/jni/CMakeLists.txt
@@ -10,7 +10,7 @@ if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
 
     set(C_FLAGS "${C_FLAGS} -O2 -fvisibility=hidden -fvisibility-inlines-hidden")
     set(LINKER_FLAGS "${LINKER_FLAGS} -Wl,-exclude-libs,ALL -Wl,--gc-sections")
-elseif (CMAKE_BUILD_TYPE STREQUAL "Debug")
+else()
     message("Builing Debug...")
 
     add_definitions(-DDEBUG)
