--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -125,11 +125,7 @@ repositories {
             includeGroup('com.github.topjohnwu.libsu')
         }
     }
-    jcenter {
-        content {
-            includeGroup('me.zhanghai.android.fastscroll')
-        }
-    }
+    mavenLocal()
 }
 
 dependencies {
@@ -150,8 +146,8 @@ dependencies {
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -163,7 +159,7 @@ dependencies {
     implementation 'dev.rikka.rikkax.material:material:1.6.5'
     implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.2.0'
-    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.2.1'
+    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.2.2'
     implementation 'dev.rikka.rikkax.insets:insets:1.1.0'
     implementation 'dev.rikka.rikkax.widget:borderview:1.0.1'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
@@ -171,7 +167,7 @@ dependencies {
     implementation 'io.github.vvb2060.ndk:boringssl:2.1'
     implementation 'dev.rikka.ndk.thirdparty:cxx:1.1.0'
 
-    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:1.1'
+    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:2.0'
 
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
