--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -132,12 +132,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
 
     //compileOnly project(':hidden-api-common')
     implementation project(':hidden-api-common-bridge')
     implementation project(':server')
+    implementation project(':bsh')
     implementation project(':starter')
     implementation project(':api')
     implementation project(':provider')
