--- a/settings.gradle
+++ b/settings.gradle
@@ -26,8 +26,8 @@ if (apiUseLocal) {
 include ':aidl'
 project(':aidl').projectDir = file("$root${File.separator}aidl")
 
-include ':bsh'
-project(':bsh').projectDir = file("$root${File.separator}bsh")
+include ':rish'
+project(':rish').projectDir = file("$root${File.separator}rish")
 
 include ':shared'
 project(':shared').projectDir = file("$root${File.separator}shared")
