--- a/signing.gradle
+++ b/signing.gradle
@@ -9,9 +9,9 @@ if (ksFile.canRead()) {
         android.signingConfigs.sign.keyAlias props['KEYSTORE_ALIAS']
         android.signingConfigs.sign.keyPassword props['KEYSTORE_ALIAS_PASSWORD']
     } else {
-        println 'some entries in \'signing.properties\' not found!'
+        android.signingConfigs.sign.storeFile = android.signingConfigs.debug.storeFile
+        android.signingConfigs.sign.storePassword = android.signingConfigs.debug.storePassword
+        android.signingConfigs.sign.keyAlias = android.signingConfigs.debug.keyAlias
+        android.signingConfigs.sign.keyPassword = android.signingConfigs.debug.keyPassword
     }
-} else {
-    println '\'signing.properties\' not found!'
 }
-
