--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -3,12 +3,7 @@ import java.nio.file.Paths
 plugins {
     id('com.android.application')
     id('kotlin-android')
-    id('dev.rikka.tools.hidden-api-refine')
-}
-
-hiddenApiRefine {
-    refinePrefix = ['$']
-    log = true
+    id('dev.rikka.tools.refine.gradle-plugin')
 }
 
 android {
