--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -137,13 +137,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
 
-    //compileOnly project(':hidden-api-common')
-    implementation project(':hidden-api-common-bridge')
     implementation project(':server')
     implementation project(':rish')
     implementation project(':starter')
     implementation project(':api')
     implementation project(':provider')
+    //compileOnly project(':hidden-api-stub')
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.core:core-ktx:1.6.0'
