--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -142,7 +142,7 @@ dependencies {
     implementation project(':starter')
     implementation project(':api')
     implementation project(':provider')
-    //compileOnly project(':hidden-api-stub')
+    compileOnly project(':hidden-api-stub')
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.core:core-ktx:1.6.0'
