--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resConfigs 'en', 'ar', 'cs', 'de', 'es-rCL', 'b+es+419', 'eo', 'hu', 'hy', 'ja', 'ko', 'pl', 'pt-rBR', 'ru', 'tr', 'uk', 'zh-rCN', 'zh-rTW'
+        resConfigs 'en', 'ar', 'cs', 'de', 'es-rCL', 'b+es+419', 'eo', 'he', 'hu', 'hy', 'id', 'ja', 'ko', 'pl', 'pt-rBR', 'ru', 'tr', 'uk', 'zh-rCN', 'zh-rTW'
         resValue "string", "versionName", "${rootProject.ext.versionName}"
         externalNativeBuild {
             cmake {
@@ -155,7 +155,7 @@ dependencies {
     implementation 'com.github.topjohnwu.libsu:core:3.1.2'
 
     implementation 'dev.rikka.rikkax.appcompat:appcompat:1.2.0-rc01'
-    implementation 'dev.rikka.rikkax.core:core:1.3.2'
+    implementation 'dev.rikka.rikkax.core:core:1.3.3'
     implementation 'dev.rikka.rikkax.material:material:1.6.5'
     implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.3.0'
