--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         tools:targetApi="r">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:banner="@mipmap/banner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
