--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -156,11 +156,12 @@ dependencies {
 
     implementation 'dev.rikka.rikkax.appcompat:appcompat:1.2.0-rc01'
     implementation 'dev.rikka.rikkax.core:core:1.3.3'
-    implementation 'dev.rikka.rikkax.material:material:1.6.5'
+    implementation 'dev.rikka.rikkax.material:material:1.6.6'
     implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.3.0'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.2.2'
     implementation 'dev.rikka.rikkax.insets:insets:1.1.0'
+    implementation 'dev.rikka.rikkax.layoutinflater:layoutinflater:1.1.0'
     implementation 'dev.rikka.rikkax.widget:borderview:1.0.1'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
 
@@ -169,7 +170,7 @@ dependencies {
 
     implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:2.0'
 
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.69'
 
     implementation 'me.zhanghai.android.appiconloader:appiconloader:1.3.1'
 }
