PairingTutorialDialog is now an Activity

--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
             android:name=".management.ApplicationManagementActivity"
             android:label="@string/home_app_management_title" />
         <activity
+            android:name=".adb.AdbPairingTutorialActivity"
+            android:label="@string/adb_pairing" />
+        <activity
             android:name=".shell.ShellTutorialActivity"
             android:label="@string/home_terminal_title" />
         <activity
