--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -151,16 +151,19 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
 
+    implementation 'com.google.android.material:material:1.6.0-alpha02'
+
     implementation 'com.github.topjohnwu.libsu:core:3.2.1'
 
-    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.2.0-rc01'
+    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.4.1'
     implementation 'dev.rikka.rikkax.compatibility:compatibility:2.0.0'
-    implementation 'dev.rikka.rikkax.core:core:1.3.3'
-    implementation 'dev.rikka.rikkax.material:material:1.6.6'
+    implementation 'dev.rikka.rikkax.core:core-ktx:1.3.4'
+    implementation 'dev.rikka.rikkax.material:material:2.0.0'
+    implementation 'dev.rikka.rikkax.material:material-preference:1.0.0'
     implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.3.0'
-    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.3.0'
-    implementation 'dev.rikka.rikkax.insets:insets:1.1.1'
+    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.3.1'
+    implementation 'dev.rikka.rikkax.insets:insets:1.2.0'
     implementation 'dev.rikka.rikkax.layoutinflater:layoutinflater:1.2.0'
     implementation 'dev.rikka.rikkax.widget:borderview:1.1.0'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
