Fix release crash by upgrading org.lsposed.hiddenapibypass

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ allprojects {
             url("https://s01.oss.sonatype.org/content/repositories/releases/")
             content {
                 includeGroupByRegex("dev.rikka.*")
+                includeGroup("org.lsposed.hiddenapibypass")
             }
         }
         mavenLocal()
