--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -1,4 +1,6 @@
+import java.nio.file.Files
 import java.nio.file.Paths
+import java.util.stream.Collectors
 
 plugins {
     id('com.android.application')
@@ -15,7 +17,6 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resConfigs 'en', 'ar', 'cs', 'de', 'es-rCL', 'b+es+419', 'eo', 'fr', 'he', 'hu', 'hy', 'id', 'ja', 'ko', 'pl', 'pt-rBR', 'ru', 'tr', 'uk', 'vi', 'zh-rCN', 'zh-rTW'
         externalNativeBuild {
             cmake {
                 arguments '-DANDROID_STL=none'
@@ -88,6 +89,77 @@ afterEvaluate {
     tasks.getByName('processReleaseResources').finalizedBy(optimizeReleaseResources)
     tasks.getByName('preReleaseBuild').dependsOn(':shell:assembleRelease')
     tasks.getByName('preDebugBuild').dependsOn(':shell:assembleDebug')
+
+    android.applicationVariants.forEach { variant ->
+        def variantNameCapitalized = variant.name.capitalize()
+        def outSrcDir = file("$buildDir/generated/source/locales/${variant.name}")
+        def outSrc = file("$outSrcDir/rikka/shizuku/manager/ShizukuLocales.java")
+        def genLocales = tasks.register("generate${variantNameCapitalized}LocalesSource") {
+            inputs.files("src/main/res")
+            outputs.file(outSrc)
+            doLast {
+                def stream = Files.list(Paths.get(projectDir.getAbsolutePath(), "src/main/res"))
+                def locales = stream
+                        .filter(file -> Files.isDirectory(file)
+                                && file.toFile().getName().startsWith("values-")
+                                && Files.exists(file.resolve("strings.xml"))
+                                && Files.size(file.resolve("strings.xml")) > 62)
+                        .map(java.nio.file.Path::getFileName)
+                        .map(path -> path.toFile().getName().substring("values-".length()))
+                        .map(name -> name.split("-", 2))
+                        .map { String[] names ->
+                            if (names.length == 1 && names[0] == "b+es+419") {
+                                println "b+es+419"
+                                return new Locale("es", "419", "")
+                            } else {
+                                if (names.length == 1)
+                                    return new Locale(names[0])
+                                else
+                                    return new Locale(names[0], names[1].substring("r".length()))
+                            }
+                        }
+                        .map { locale -> locale.toLanguageTag() }
+                        .collect(Collectors.toList())
+                stream.close()
+
+                locales.add("en-US")
+                locales.sort(String.CASE_INSENSITIVE_ORDER)
+
+                def displayLocaleMapping = [
+                        "zh-CN": "zh-Hans",
+                        "zh-TW": "zh-Hant",
+                ]
+
+                def displayLocales = locales.stream()
+                        .map(s -> displayLocaleMapping.get(s) ?: s)
+                        .collect(Collectors.toList())
+
+                println "Locales $locales"
+                println "Display locales $displayLocales"
+
+                def localesString = String.join(",", locales.stream().map(s -> "\"$s\"").collect(Collectors.toList()))
+                def displayLocalesString = String.join(",", displayLocales.stream().map(s -> "\"$s\"").collect(Collectors.toList()))
+
+                def outSteam = new PrintStream(outSrc)
+                outSteam.print(
+                        """package rikka.shizuku.manager;
+                                  |
+                                  |public final class ShizukuLocales {
+                                  |    public static final String[] LOCALES = {"SYSTEM",$localesString};
+                                  |    public static final String[] DISPLAY_LOCALES = {"SYSTEM",$displayLocalesString};
+                                  |}""".stripMargin())
+                outSteam.flush()
+                outSteam.close()
+            }
+        }
+        variant.registerJavaGeneratingTask(genLocales, outSrcDir)
+
+        def kotlinCompileTask = (SourceTask) tasks.findByName("compile${variantNameCapitalized}Kotlin")
+        if (kotlinCompileTask != null) {
+            kotlinCompileTask.dependsOn(genLocales)
+            kotlinCompileTask.source(outSrcDir)
+        }
+    }
 }
 
 android.applicationVariants.all { variant ->
