--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -219,7 +219,7 @@ dependencies {
     implementation project(':starter')
     implementation project(':api')
     implementation project(':provider')
-    compileOnly project(':hidden-api-stub')
+    compileOnly 'dev.rikka.hidden:stub:1.0.0'
 
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.core:core-ktx:1.7.0'
