--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     implementation project(':starter')
     implementation project(':rish')
     implementation project(':server-shared')
-    compileOnly project(':hidden-api-stub')
-
+    implementation 'dev.rikka.hidden:compat:1.0.0'
+    compileOnly 'dev.rikka.hidden:stub:1.0.0'
 }
