--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation project(':shared')
     implementation project(':server-shared')
     compileOnly project(':provider')
-    compileOnly project(':hidden-api-stub')
-    implementation("dev.rikka.tools.refine:runtime:2.0.0")
+    implementation 'dev.rikka.hidden:compat:1.0.0'
+    compileOnly 'dev.rikka.hidden:stub:1.0.0'
+    implementation("dev.rikka.tools.refine:runtime:3.0.3")
 }
