--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.18.0'
         classpath 'dev.rikka.tools.refine:gradle-plugin:3.0.3'
-        classpath 'dev.rikka.tools.autoresconfig:gradle-plugin:1.0.0'
-        classpath 'dev.rikka.tools.materialthemebuilder:dev.rikka.tools.materialthemebuilder.gradle.plugin:1.1.0'
+        classpath 'dev.rikka.tools.autoresconfig:gradle-plugin:1.1.1'
+        classpath 'dev.rikka.tools.materialthemebuilder:gradle-plugin:1.1.0'
     }
 }
 
