Fix start on boot for root is broken

--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -125,7 +125,7 @@
             android:foregroundServiceType="connectedDevice" />
 
         <receiver
-            android:name=".receiver.ShizukuReceiver"
+            android:name=".receiver.BootCompleteReceiver"
             android:directBootAware="true"
             android:enabled="true"
             android:exported="true">
@@ -135,6 +135,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".receiver.ShizukuReceiver"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="true"
+            tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="rikka.shizuku.intent.action.REQUEST_BINDER" />
             </intent-filter>
