--- a/shell/build.gradle
+++ b/shell/build.gradle
@@ -23,11 +23,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    lintOptions {
-        checkReleaseBuilds false
-    }
     dependenciesInfo {
         includeInApk false
+    }
+    lint {
+        checkReleaseBuilds false
     }
 }
 
